--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -8,7 +8,8 @@
 - Pointwise addition and multiplication
 - Add congruence documentation
 - use \varphi instead of \phi
-- user \varepsilon instead of \epsilon     
+- user \varepsilon instead of \epsilon
+- use fancyvrb latex package for source block        
   
 
 * Version 0.4.0 <2024-03-26 Tue>
