--- a/readme.org
+++ b/readme.org
@@ -68,7 +68,7 @@ In this document I load number theory packages as:
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
   (require '[vk.ntheory.primes :as p])
-  (require '[vk.ntheory.ar-func :as af])
+  (require '[vk.ntheory.arithmetic-functions :as af])
   (require '[vk.ntheory.congruence :as c])
   (require '[vk.ntheory.primitive-roots :as pr])
   (require '[clojure.math :as math])
@@ -536,14 +536,14 @@ more check functions:
 - ~check-prime~
 - ~check-odd-prime~      
 
-* Arithmetical functions ~vk.ntheory.ar-func~
+* Arithmetical functions ~vk.ntheory.arithmetic-functions~
 
 This section cover namespace ~vk.ntheory.primes~. It contains some
 well known arithmetical functions and also functions which allow build
 new arithmetical functions.
 
 #+begin_src clojure :results silent
-  (require '[vk.ntheory.ar-func :as af])
+  (require '[vk.ntheory.arithmetic-functions :as af])
 #+end_src
 
 ** Arithmetical function
@@ -598,8 +598,7 @@ In clojure function ~f+~ returns pointwise addition:
 #+end_src
 
 #+RESULTS:
-: 15
-: 
+: class clojure.lang.Compiler$CompilerException
 
 ** Pointwise multiplication
 
@@ -997,7 +996,7 @@ more than two function as an argument.
 #+end_src
 
 #+RESULTS[13fd6000aaba4122437535d8be6a4d8841038ace]:
-: #function[vk.ntheory.ar-func/d*/fn--8811]
+: #function[vk.ntheory.ar-func/d*/fn--10570]
 : 
 
 
@@ -1041,17 +1040,134 @@ identity function, let's denote it as $N(n)$, is $N(n) \cdot \mu(n)$
 : true
 : 
 
-
 * Conguences ~vk.ntheory.congruence~
 
-This section cover namespaces ~vk.ntheory.congruence~. It contains functions
-for solve linear congruence and system of linear congruences.
+This section cover namespaces ~vk.ntheory.congruence~. It contains
+functions for solve any congruence with brute force approach and also
+contains solutions for specific congruences such as linear congruence
+and system of linear congruences.
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.congruence :as c])
 #+end_src
 
 In progress ...
+
+** Brute force solution
+
+If we have a congruence
+
+$$
+f(x) \equiv 0 \pmod{m}
+$$
+
+we can solve it by try all $m$ residue classes modulo $m$.There is
+~solve~ function for this. It accept two aruments, first argument is a
+some function of one argument and second arument is a modulo. Let's
+for example solve congruence $x^2 \equiv 1 \pmod{8}$
+
+#+begin_src clojure
+  (let [f (fn [x] (dec (* x x)))]
+    (c/solve f 8)
+    )
+#+end_src
+
+#+RESULTS:
+: (1 3 5 7)
+: 
+
+** Linear congruence
+
+Let consider linear congruence
+
+$$
+ax \equiv b \pmod{m}
+$$
+
+There is function ~solve-linear~ for solve linear congruence. It accepts
+3 arguments ~a~, ~b~ and ~m~. Let's solve congruence $6x \equiv 3 \pmod{15}$
+
+#+begin_src clojure
+  (c/solve-linear 6 3 15)
+#+end_src
+
+#+RESULTS:
+: #{3 8 13}
+: 
+
+** System of linear congruences
+
+Let consider system of linear congruences
+
+$$\begin{align*}
+x & \equiv c_1 \pmod{m_1} \\
+x & \equiv c_2 \pmod{m_2} \\
+  & \vdots \\
+x & \equiv c_n \pmod{m_n} \\
+\end{align*}
+$$
+
+There is a function ~solve-remaindes~ for solve such system. It accepts
+a sequence of pairs $([c_1,m_1],[c_2,m_2],\dots,[c_n,m_n ])$ and returns pair
+$[r M]$, where $M$ is the least common multiple of $m_1,m_2,\dots,m_n$, and
+$r$ is residue to modulo $M$. 
+
+Let's solve system
+
+$$\begin{align*}
+x &\equiv 2  &\pmod{7} \\
+x &\equiv 5  &\pmod{9} \\
+x &\equiv 11 &\pmod{15} \\
+\end{align*}
+$$
+
+#+begin_src clojure
+  (c/solve-remainders [[2 7][5 9][11 15]])
+#+end_src
+
+#+RESULTS:
+: [86 315]
+: 
+
+So the answer is $86\pmod{315}$
+
+** Coprime moduli case
+
+When we have system of linear conguence
+
+$$\begin{align*}
+x & \equiv c_1 \pmod{m_1} \\
+x & \equiv c_2 \pmod{m_2} \\
+  & \vdots \\
+x & \equiv c_n \pmod{m_n} \\
+\end{align*}
+$$
+
+and any pair of moduli relatively prime, i.e. $(m_i, m_j) = 1$ if $i
+\ne j$, the the system has one solution modulo the product $m_1 m_2
+\dots m_n$. This statement called Chinese Remainder Theorem. We can
+solve such system with ~solve-remainder~ function, but there is
+another function ~solve-coprime-remainders~.
+
+Let's solve system:
+
+$$\begin{align*}
+x &\equiv 6  &\pmod{17} \\
+x &\equiv 4  &\pmod{11} \\
+x &\equiv -3 &\pmod{8} \\
+\end{align*}
+$$
+
+#+begin_src clojure
+  (c/solve-remainders [[6 17][4 11][-3 8]])
+#+end_src
+
+#+RESULTS:
+: [125 1496]
+: 
+
+So the answer is $125\pmod{1496}$
+
 
 * Primitive Roots ~vk.ntheory.primitive-roots~
 
@@ -1062,10 +1178,10 @@ In progress ...
 
 In progress...
 
-* Quadratic residies ~vk.ntheory.quadratic-residue
+* Quadratic residies ~vk.ntheory.quadratic-residues
 
 #+begin_src clojure :results silent
-  (require '[vk.ntheory.quadratic-residue :as qr])
+  (require '[vk.ntheory.quadratic-residues :as qr])
 #+end_src
 
 
