--- a/readme.org
+++ b/readme.org
@@ -1115,9 +1115,9 @@ $r$ is residue to modulo $M$.
 Let's solve system
 
 $$\begin{align*}
-x &\equiv 2  &\pmod{7} \\
-x &\equiv 5  &\pmod{9} \\
-x &\equiv 11 &\pmod{15} \\
+x &\equiv 2  \pmod{7} \\
+x &\equiv 5  \pmod{9} \\
+x &\equiv 11 \pmod{15} \\
 \end{align*}
 $$
 
@@ -1152,9 +1152,9 @@ another function ~solve-coprime-remainders~.
 Let's solve system:
 
 $$\begin{align*}
-x &\equiv 6  &\pmod{17} \\
-x &\equiv 4  &\pmod{11} \\
-x &\equiv -3 &\pmod{8} \\
+x &\equiv 6 \pmod{17} \\
+x &\equiv 4 \pmod{11} \\
+x &\equiv -3 \pmod{8} \\
 \end{align*}
 $$
 
